--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,10 @@
 #root{
 	display: flex;
-	width: 100%;height:100%;
+	width: 99w;height:95vh;
 	flex-flow: column wrap;
 	justify-content: center;
 	align-items: center;
+	// background-image: url("./main.jpg");
 	.heading {
 		color: red;
 		font-family: "Poppins", sans-serif, serif;
